GNOME Bugzilla – Bug 766281
utils/json_from_string: Don't reset user-provided error argument
Last modified: 2017-03-18 19:01:58 UTC
Created attachment 327648 [details] [review] patch to restore error propagation While testing json_from_string, I found that if parsing fails, I never get an error about the failure. The attached one-liner patch should fix this.
Review of attachment 327648 [details] [review]: You're absolutely right.