utils/json_from_string: Don't reset user-provided error argument

In json_from_string, just pass the user-provided GError** to
json_parser_load_from_data. Otherwise json_from_string will never
propagate any parser errors back to the caller.

https://bugzilla.gnome.org/show_bug.cgi?id=766281